# gameoflife

./: gameoflife.py  gameoflife_screensaver  install.sh  pyproject.toml
lib/gpio/: neopixel.py
samples/: a_dance.txt  complex  gliders.txt  loafer_synthesis  weekender.txt  weekenders.txt
variants/codegolf/: golf.py
