[project]
name = "gameoflife"
version = "0.1"
description = "Game of Life"

[project.optional-dependencies]
dev = [
    "black==23.10.0",
    "isort==5.12.0",
    "pylint==3.0.1",
    "ipython",
    "mypy",
]

[tool.isort]
profile = "black"
known_first_party = "csms"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''
